<resources>

    <!-- App Data -->
    <string name="app_name">xFuel</string>

    <string name="title_section1">Fuel Planning</string>
    <string name="title_section2">History</string>
    <string name="title_section3">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- API Data -->
    <string translatable="false" name="account">E5A1B183</string>
    <string translatable="false" name="license">d55134a45df6d8ab37d6186284bfb775</string>
    <string translatable="false" name="email">edvard.holst@gmail.com</string>
    <string name="post_url" translatable="false">http://fuelplanner.com/api/fuelapi.php</string>

    <!-- Fuel Planning -->
    <string name="fuel_planning_title">Fuel Planning</string>
    <string name="aircaft_type">Aircraft</string>
    <string name="origin_airport">ICAO</string>
    <string name="origin">Departure Airport</string>
    <string name="dest">DEST</string>
    <string name="destination_airport">Arrival Airport</string>
    <string name="calculate">Submit</string>
    <string name="units">Units</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="round_trip">Round Trip</string>
    <string name="advanced_options">Advanced</string>
    <string name="more">More</string>

    <string name="error_network">An active internet connection is required to request fuel plans</string>
    <string name="error_support">Could not find a suitable messaging app.. </string>

    <!--  Fuel Report -->
    <string name="fuel_report">Fuel Report</string>
    <string name="load_sheet">Load Sheet</string>
    <string name="distance">Distance</string>
    <string name="est_fuel_usage">Est. Fuel Usage</string>
    <string name="reserve_fuel">Reserve Fuel</string>
    <string name="takeoff_fuel">Takeoff Fuel</string>
    <string name="estimated_landing_weight">Est. Landing Weight</string>
    <string name="estimated_time_enroute">Est. Time Enroute</string>
    <string name="reserve_fuel_time">Reserve Fuel Time</string>
    <string name="total_fuel_time">Total Fuel Time</string>
    <string name="metar_orig">METAR Origin</string>
    <string name="metar_dest">METAR Destination</string>
    <string name="zero_fuel_weight">Zero Fuel Weight</string>
    <string name="share">Share</string>

    <!-- Menu Bar Items -->
    <string name="action_clear_history">Clear History</string>
    <string name="action_share">Share</string>


    <!-- History Fragment -->
    <string name="history_title">Fuel Planning History</string>
    <!-- Output values -->
    <string name="heading_tc">Initial Heading</string>
    <string name="heading_tc_summary">Initial direct true heading from ORIG to DEST</string>
    <string name="oew">OEW</string>
    <string name="oew_summary">Operating empty weight</string>
    <string name="ttl">Total traffic load</string>
    <string name="zfw">Zero fuel weight</string>
    <string name="fuel_efu">Estimated fuel usage</string>
    <string name="fuel_rsv">Fuel RSV</string>
    <string name="fuel_rsv_summary">Reserve Fuel</string>
    <string name="fuel_tof">Takeoff Fuel</string>
    <string name="time_blk">Block Time</string>
    <string name="time_blk_summary">Estimated total block time from time-out to time-in.</string>
    <string name="time_tte">TTE</string>
    <string name="time_tte_summary">Total Time Enroute</string>
    <string name="time_rsv">Time RSV</string>
    <string name="time_rsv_summary">Reserve Fuel Time</string>
    <string name="nm_summary">Nautical miles between origin and destination</string>
    <string name="tow_summary">Takeoff weight</string>
    <string name="underload_summary">Calculated underload</string>
    <string name="zfw_summary">Zero fuel weight</string>
    <string name="ttl_summary">Total traffic load</string>
    <string name="lwt_summary">Estimated landing weight</string>
    <string name="fuel_efu_summary">Estimated fuel usage</string>
    <string name="fuel_tof_summary">Takeoff fuel</string>

    <!-- Advanced Options -->

    <string name="advanced_title">Optional Advanced Parameters</string>
    <string name="advanced_summary">kg or lbs according to in-app setting</string>
    <string name="advanced_ttl">Total Traffic Load</string>
    <string name="advanced_hint_ttl">TTL</string>
    <string name="advanced_oew">Operating empty weight</string>
    <string name="advanced_hint_oew">OEW</string>
    <string name="advanced_mtank">Maximum fuel weight</string>
    <string name="advanced_hint_mtank">MTANK</string>

    <!--  History -->
    <string name="history">History</string>
    <string name="fuel_history">Fuel Planning History</string>
    <string name="delete_history">Clear History</string>
    <string name="history_deleted">History cleared!</string>

    <!--  Favorites -->
    <string name="favorites">Favorites</string>
    <string name="delete_fav">Delete</string>

    <!-- Progress Dialogs-->
    <string name="progress_aircraft_title">Loading Aircraft</string>
    <string name="progress_aircraft_text">Downloading aircraft data</string>
    <string name="progress_fuelplan_title">Preparing Fuel Plan</string>
    <string name="progress_fuelplan_text">Downloading...</string>

    <!-- Error Messages-->
    <string name="error_title">Error</string>
    <string name="error_aircraft_download">Could not communicate with aircraft data server</string>
    <string name="error_fuel_plan">Could not reach fuel plan server</string>
    <string name="error_invalid_airport">Invalid airport ICAO</string>
    <string name="error_no_valid_response">Unable to calculate fuel plan. Check your parameters</string>

    <!-- Preferences -->
    <string name="prefs_show_units">Show units</string>
    <string name="prefs_show_units_summary">Show unit notations on load sheet</string>
    <string name="prefs_remember_input">Remember Parameters</string>
    <string name="prefs_remember_input_summary">Automatically fill in your last used fuel plan parameters</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_history">History</string>
    <string name="prefs_history_sort_desc">Sort newest first</string>
    <string name="prefs_history_sort_desc_summary">The most recent history entries are on the top.</string>
</resources>