<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="#e5e7ee"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="fill_parent"
        android:background="@color/accent_blue"
        android:elevation="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fuelPlanningTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/fuel_planning_title"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:typeface="sans" />

    </RelativeLayout>



<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_below="@id/headerLayout">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:id="@+id/layout_fuel_plan_card"
            android:layout_height="wrap_content">

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_plan_view"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                card_view:cardElevation="8dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:id="@+id/layout_fuel_elements"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:id="@+id/imageDeparture"
                        android:layout_width="30dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_dep"/>

                    <TextView
                        android:id="@+id/textViewOrigin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/imageDeparture"
                        android:layout_toRightOf="@id/imageDeparture"
                        android:layout_marginLeft="15dp"
                        android:text="@string/origin"
                        android:textColor="@color/accent_light_gray"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextOrigin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textViewOrigin"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="20dp"
                        android:ems="4"
                        android:gravity="right"
                        android:hint="@string/origin_airport"
                        android:inputType="textCapCharacters|textNoSuggestions"
                        android:maxLength="4"
                        android:textColor="@color/accent_dark_gray"
                        android:textSize="25sp" />

                    <ImageView
                        android:id="@+id/imageArrival"
                        android:layout_width="30dp"
                        android:layout_below="@id/editTextOrigin"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_arr"/>

                    <TextView
                        android:id="@+id/textViewDeparture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/imageArrival"
                        android:layout_toRightOf="@id/imageArrival"
                        android:layout_marginLeft="15dp"
                        android:text="@string/destination_airport"
                        android:textColor="@color/accent_light_gray"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextDepature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textViewDeparture"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="20dp"
                        android:ems="4"
                        android:gravity="right"
                        android:hint="@string/origin_airport"
                        android:inputType="textCapCharacters|textNoSuggestions"
                        android:maxLength="4"
                        android:textColor="@color/accent_dark_gray"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/textViewAircraft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/imageArrival"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/editTextDepature"
                        android:text="@string/aircaft_type"
                        android:textColor="@color/accent_light_gray"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinnerAircraft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textViewAircraft"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_alignLeft="@id/textViewAircraft" />


                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@id/layout_fuel_plan_card">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_aircraft_view"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:padding="15dp"

                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                card_view:cardElevation="8dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp">

                <TextView
                    android:id="@+id/textViewUnits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/units"
                    android:textColor="@color/accent_light_gray"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/textViewUnits">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:buttonTint="@color/accent_red"
                        android:text="@string/metric"
                        android:id="@+id/radioButtonMetric" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:buttonTint="@color/accent_red"
                        android:text="@string/imperial"
                        android:id="@+id/radioButtonImperial" />

                </RadioGroup>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>


    </RelativeLayout>
</ScrollView>



</RelativeLayout>